diagnostics.txt
Parsed Rust Compiler Output:

--- Message 1 ---
Level: error
Message: mismatched types
File: src-tauri\src\mcp\handler.rs
Location: Line 65, Column 60
Label: expected `RpcErrorCodes`, found `i64`
Code Context:         AppError::CommandBlocked(_) => RpcErrorCodes::from(-32001i64), 
  note: associated function defined here
Full Rendered Output:
error[E0308]: mismatched types
   --> src-tauri\src\mcp\handler.rs:65:60
    |
65  |         AppError::CommandBlocked(_) => RpcErrorCodes::from(-32001i64), 
    |                                        ------------------- ^^^^^^^^^ expected `RpcErrorCodes`, found `i64`
    |                                        |
    |                                        arguments to this function are incorrect
    |
note: associated function defined here
   --> C:\Users\Steve Business\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\convert\mod.rs:587:8
    |
587 |     fn from(value: T) -> Self;
    |        ^^^^
